# app-risk-classifier

./: FILE_MANIFEST.md  README.md  ai.json  ai.py  config.py  core.py  dstack.yml  env.example  incentivized.py  incentivized_label_mapping.json  label_dataset.py  labeling.py  pdu.json  pdu.py  predict_csv.py  predict_one.py  processor.py  processor_config.py  processor_utils.py  pyproject.toml  requirements.txt
app_classifier/: __init__.py  config.py  inference.py  text.py  training.py
configs/: pdu.json
scripts/: predict_csv.py  predict_one.py  train_qlora.py  zip_output_dir.py
