[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-risk-classifier"
version = "0.1.0"
description = "Inference and queue worker for Hugging Face PEFT app risk classifier adapters."
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.30",
    "bitsandbytes",
    "huggingface_hub",
    "numpy",
    "pandas",
    "peft",
    "requests",
    "sentencepiece",
    "torch",
    "transformers>=4.41"
]

[tool.setuptools]
packages = ["app_classifier"]
